# erpEmbordery

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml
.github/: pull_request_template.md
backend/: Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 50fd96c08989_initial_schema_tenants_users_refresh_.py
backend/app/: main.py  seed.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: __init__.py  refresh_token.py  tenant.py  user.py
backend/app/schemas/: auth.py
docs/: arquitectura-tecnica.md  roadmap.md
docs/fase-1/: 01-arquitectura-general.md  02-clientes-producciones.md  03-maquinas-costos-socios.md  04-catalogo-servicios.md  05-dashboard.md
frontend/: .npmrc  Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Home.tsx  Login.tsx
frontend/src/stores/: auth.ts
